[gd_scene load_steps=3 format=3]

[node name="SoloOptionsMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
alignment = 1

[node name="MapSizeSpin" type="SpinBox" parent="VBoxContainer"]
min_value = 10
max_value = 100
step = 1
value = 20
suffix = " cases"
custom_minimum_size = Vector2(200, 32)

[node name="DifficultyOption" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 32)

[node name="StartButton" type="Button" parent="VBoxContainer"]
text = "DÃ©marrer"
custom_minimum_size = Vector2(200, 40)

[node name="CancelButton" type="Button" parent="VBoxContainer"]
text = "Annuler"
custom_minimum_size = Vector2(200, 40)

[ext_resource path="res://scripts/menus/SoloOptionsMenu.gd" type="Script" id=1]
